[project]
name = "protocols"
version = "0.1.0"
description = "Understanding MCP & A2A protocols"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-api-python-client>=2.170.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langgraph>=0.4.7",
    "mcp>=1.9.1",
    "ruff>=0.11.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = [
    "weather",
]
